# fraud-detection

./: .env.template  .gitignore  CLAUDE.md  README.md  docker-compose.yml  grid_search.sh  package-lock.json  package.json  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yaml  deploy.yaml  train.yaml
container/: Dockerfile  app.py  cmds.txt  drift.py  features.py  inference.py  preprocess.py  requirements.txt  schemas.py
container/model/: imputer.joblib  logistic_reg_model.joblib  meta_model.joblib  scaler.joblib
data/: test.py
docs/: missing_value_strategy.md  weekend_plan.md
ml/: Dockerfile.train  requirements.txt
ml/features/: build_features.py  feature_selection.py  generate_reference.py
ml/training/: ensemble.py  fargate_train.py  feature_select.py  grid_search.py  threshold_tuning.py  train.py  tune_meta.py
